--- a/charts/resiproxy/templates/deployment.yaml
+++ b/charts/resiproxy/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       containers:
         - name: toxiproxy
           image: "{{ .Values.image.toxiproxy.repository }}:{{ .Values.image.toxiproxy.tag }}"
-          imagePullPolicy: Always
+          imagePullPolicy: {{ .Values.image.toxiproxy.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.toxiproxy.internalPort }}
         - name: {{ .Chart.Name }}
