--- a/charts/resiproxy/templates/service-resiproxy.yaml
+++ b/charts/resiproxy/templates/service-resiproxy.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: toxy-resiproxy
+  name: resiproxy-resiproxy
   labels:
     app: {{ template "resiproxy.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
