[Bruno] Add a configmap to pass config parameters to resiproxy

--- a/charts/resiproxy/templates/deployment.yaml
+++ b/charts/resiproxy/templates/deployment.yaml
@@ -29,6 +29,9 @@ spec:
               protocol: TCP
               containerPort: {{ .Values.service.toxiproxy.internalPort }}
         - name: {{ .Chart.Name }}
+          envFrom:
+            - configMapRef:
+                name: configmap-{{ .Values.service.resiproxy.name }}
           image: "{{ .Values.image.resiproxy.repository }}:{{ .Values.image.resiproxy.tag }}"
           imagePullPolicy: {{ .Values.image.resiproxy.pullPolicy }}
           ports:
