--- a/chart/templates/service-resiproxy.yaml
+++ b/chart/templates/service-resiproxy.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: resiproxy-resiproxy
+  name: {{ template "resiproxy.fullname" . }}
   labels:
     app: {{ template "resiproxy.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
