--- a/chart/templates/service-toxiproxy.yaml
+++ b/chart/templates/service-toxiproxy.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: resiproxy-toxiproxy
+  name: {{ template "toxiproxy.fullname" . }}
   labels:
     app: {{ template "resiproxy.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
