--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -9,40 +9,21 @@ image:
     pullPolicy: Always
   resiproxy:
     repository: marqub/resiproxy
-    tag: latest
+    tag: dev
     pullPolicy: Always  
 service:
   toxiproxy:
     name: toxiproxy
-    type: ClusterIP
+    type: NodePort
     externalPort: 8474
     internalPort: 8474
   resiproxy:
     name: resiproxy
-    type: ClusterIP
+    type: NodePort
     externalPort: 8080
     internalPort: 8080
 ingress:
   enabled: true
   # Used to create an Ingress record.
   hosts:
-    - resiproxy.marqub.com
-  annotations:
-    kubernetes.io/ingress.class: istio
-    # kubernetes.io/tls-acme: "true"
-  tls:
-    # Secrets must be manually created in the namespace.
-    - secretName: istio-ingress-certs
-    #   hosts:
-    #     - chart-example.local
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+    - resiproxy.resiliency-testing.com
